--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: fancy_shimmer_image
 description: Package for easy use of images that are automatically cacheable and have a beautiful on the fly (but it can be configured) shimmer effect while loading
-version: 1.0.0
+version: 1.0.0+1
 author: Rodrigo Vasconcelos <rodrigobastosv@gmail.com>
 homepage: https://github.com/rodrigobastosv/fancy-shimmer-image
 
@@ -10,7 +10,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  cached_network_image: ^1.1.3
+  cached_network_image: ^2.0.0
   shimmer: ^1.0.1
 
 dev_dependencies:
