--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: fancy_shimmer_image
 description: Package for easy use of images that are automatically cacheable and have a beautiful on the fly (but it can be configured) shimmer effect while loading
-version: 1.0.0+1
+version: 1.0.0+2
 homepage: https://github.com/rodrigobastosv/fancy-shimmer-image
 
 environment:
@@ -9,8 +9,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  cached_network_image: ^2.0.0
-  shimmer: ^1.0.1
+  cached_network_image: ^2.2.0+1
+  shimmer: ^1.1.1
 
 dev_dependencies:
   flutter_test:
