--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,16 +1,16 @@
 name: fancy_shimmer_image
 description: Package for easy use of images that are automatically cacheable and have a beautiful on the fly (but it can be configured) shimmer effect while loading
-version: 1.0.2
+version: 2.0.0-nullsafety.0
 homepage: https://github.com/rodrigobastosv/fancy-shimmer-image
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: '>=2.12.0-0 <3.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
-  cached_network_image: ^2.3.2+1
-  shimmer: ^1.1.1
+  cached_network_image: ^3.0.0-nullsafety
+  shimmer: ^2.0.0-nullsafety.0
 
 dev_dependencies:
   flutter_test:
