--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -12,9 +12,7 @@ dependencies:
     sdk: flutter
   fancy_shimmer_image:
     path: ../
-  random_color: ^1.0.5
-
-  cupertino_icons: ^0.1.3
+  random_color: ^1.0.6-nullsafety
 
 dev_dependencies:
   flutter_test:
