--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: fancy_shimmer_image
 description: Package for easy use of images that are automatically cacheable and have a beautiful on the fly (but it can be configured) shimmer effect while loading
-version: 2.0.1
+version: 2.0.1+1
 homepage: https://github.com/rodrigobastosv/fancy-shimmer-image
 
 environment:
@@ -9,7 +9,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  cached_network_image: ^3.0.0
+  cached_network_image: ^3.2.0
   shimmer: ^2.0.0
 
 dev_dependencies:
