--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,19 +1,21 @@
 name: fancy_shimmer_image
 description: Package for easy use of images that are automatically cacheable and have a beautiful on the fly (but it can be configured) shimmer effect while loading
-version: 2.0.3
+version: 2.0.4
 homepage: https://github.com/rodrigobastosv/fancy-shimmer-image
 
 environment:
   sdk: ">=2.12.0 <4.0.0"
 
 dependencies:
+  cached_network_image: ^3.2.3
   flutter:
     sdk: flutter
-  cached_network_image: ^3.2.3
+  flutter_cache_manager: ^3.3.1
   shimmer: ^3.0.0
-
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  very_good_analysis: ^5.1.0
 
 flutter:
